# sdb

./: CMakeLists.txt  README.md
include/libsdb/: error.hpp  libsdb.hpp  pipe.hpp  process.hpp
src/: CMakeLists.txt  pipe.cpp  process.cpp
test/: tests.cpp
test/targets/: run_endlessly.cpp
tools/: sdb.cpp
